Fix navbutton spacing

--- a/css/blog.css
+++ b/css/blog.css
@@ -37,7 +37,7 @@ div.navbutton a {
 	text-align: center;
 	font-size: 3em;
 	text-decoration: none;
-	padding: 0px 10px 0px 30px;
+	padding: 0px 20px 0px 20px;
 }
 div.navbutton a:hover {
 	color: white;
@@ -52,7 +52,7 @@ div.navbuttonselected a {
 	text-align: center;
 	font-size: 3em;
 	text-decoration: none;
-	padding: 0px 10px 0px 30px;
+	padding: 0px 20px 0px 20px;
 }
 div.navbuttonselected a:hover {
 	background-color: #55565A;
